<resources>
    <string name="app_name">I, Consumer</string>
    <string name="my_finance">My Finance</string>

    <string-array name="main_tab_names">
        <item>Računi</item>
        <item>Statistika</item>
    </string-array>

    <string name="bill_details">Bill details</string>
    <string name="category_details">Category details</string>
    <string name="party_details">Party details</string>
    <string name="new_bill">New bill</string>
    <string name="new_bill_category">New category</string>
    <string name="new_party">New party</string>
    <string name="edit_category">Edit category</string>
    <string name="edit_bill">Edit bill</string>
    <string name="edit_party">Edit party</string>

    <string name="pick_category">Pick a category</string>
    <string name="pick_parent_category">Pick a parent category</string>
    <string name="pick_recipient">Pick a recipient</string>
    <string name="pick_date">Pick a date</string>
    <string name="category_color">Category color</string>
    <string name="parent_category">Parent category</string>

    <string name="categories">Categories</string>
    <string name="parties">Parties</string>

    <string name="total_bills">Total bills</string>
    <string name="total_categories">Total categories</string>
    <string name="total_spent">Total spent</string>
    <string name="spent_this_month">Spent this month</string>
    <string name="spending_by_category">Spending by category</string>
    <string name="spending_by_recipient">Spending by recipient</string>
    <string name="total_by_category">Total by category</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="street">Street</string>
    <string name="street_number">Street number</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>

    <string name="error_fill_all_fields">All fields must be filled</string>
    <string name="error_fill_bill">Recipient and date fields must be filled</string>
    <string name="error_name_required">Name is required</string>

</resources>