<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="hr.ferit.dominikzivko.myfinance.ui.dest.stats.StatsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize"
            android:paddingVertical="@dimen/container_padding_small"
            tools:context=".ui.dest.stats.StatsFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_stats_billNumeric"
                style="@style/StatCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/card_stats_categoryNumeric"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Label.Centered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_bills" />

                    <TextView
                        style="@style/StatValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(viewModel.totalBills)}"
                        tools:text="xxxx" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_stats_categoryNumeric"
                style="@style/StatCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/card_stats_billNumeric"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_stats_billNumeric"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Label.Centered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_categories" />

                    <TextView
                        style="@style/StatValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(viewModel.totalCategories)}"
                        tools:text="xxxx" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_stats_spending"
                style="@style/StatCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_stats_billNumeric">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Label.Centered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_spent" />

                    <TextView
                        style="@style/StatValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{Double.toString(viewModel.totalSpent)}"
                        tools:text="xxxx" />

                    <TextView
                        style="@style/Label.Centered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spent_this_month" />

                    <TextView
                        style="@style/StatValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{Double.toString(viewModel.monthSpent)}"
                        tools:text="xxxx" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/layout_stats_navButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:divider="@drawable/divider"
                android:showDividers="middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_stats_spending">

                <Button
                    android:id="@+id/btn_stats_byCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_baseline_category_24"
                    android:text="@string/spending_by_category" />

                <Button
                    android:id="@+id/btn_stats_byRecipient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_baseline_party_24"
                    android:text="@string/spending_by_recipient" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_stats_totalByCategoryBarChart"
                style="@style/ChartCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_stats_navButtons">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart_stats_totalByCategoryBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/chart_height" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/ChartCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_stats_totalByCategoryBarChart">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart_stats_totalByCategoryPie"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tall_chart_height" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>